--- a/cook_app/pubspec.yaml
+++ b/cook_app/pubspec.yaml
@@ -23,15 +23,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^1.3.0 
+  sqflite: ^2.0.0+3 
+  path_provider: ^2.0.2
+  
   dependencies:
-  http: ^0.12.0 
+  http: ^0.13.3 
   # path:
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.3
 
 dev_dependencies:
   flutter_test:
